@@ -55,6 +55,14 @@
 							</xsd:documentation>
 						</xsd:annotation>
 					</xsd:attribute>
+					<xsd:attribute name="separator" type="xsd:string">
+						<xsd:annotation>
+							<xsd:documentation><![CDATA[
+	The default statement separator to use (the default is to use ';' if it is present
+	in the script, or '\n' otherwise).
+				]]></xsd:documentation>
+						</xsd:annotation>
+					</xsd:attribute>
 					<xsd:attribute name="type" type="databaseType" default="HSQL">
 						<xsd:annotation>
 							<xsd:documentation><![CDATA[
@@ -134,6 +142,14 @@
 						</xsd:enumeration>
 					</xsd:restriction>
 				</xsd:simpleType>
+			</xsd:attribute>
+			<xsd:attribute name="separator" type="xsd:string">
+				<xsd:annotation>
+					<xsd:documentation><![CDATA[
+	The default statement separator to use (the default is to use ';' if it is present
+	in the script, or '\n' otherwise).
+				]]></xsd:documentation>
+				</xsd:annotation>
 			</xsd:attribute>
 		</xsd:complexType>
 	</xsd:element>
