@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+	   xmlns:jdbc="http://www.springframework.org/schema/jdbc"
+	   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	   xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd
+		http://www.springframework.org/schema/jdbc http://www.springframework.org/schema/jdbc/spring-jdbc-4.3.xsd">
+
+	<jdbc:embedded-database id="dataSource" type="HSQL" separator="@@">
+		<jdbc:script location="classpath:org/springframework/jdbc/config/db-schema.sql" separator=";"/>
+		<jdbc:script location="classpath:org/springframework/jdbc/config/db-test-data-endings.sql"/>
+	</jdbc:embedded-database>
+
+</beans>
